ENEX FSL/snapshotDownload (1)/objects/AssignedResource.object
<CustomObject><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds><externalSharingModel>ControlledByParent</externalSharingModel><fields><fullName>FSL__EstimatedTravelDistanceFrom__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Approximate Travel Distance From</label><precision>18</precision><required>false</required><scale>2</scale><type>Number</type><unique>false</unique></fields><fields><fullName>FSL__EstimatedTravelDistanceTo__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Approximate Travel Distance To</label><precision>18</precision><required>false</required><scale>2</scale><type>Number</type><unique>false</unique></fields><fields><fullName>FSL__EstimatedTravelTimeFrom__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Approximate Travel Time From (Minutes)</label><precision>18</precision><required>false</required><scale>2</scale><type>Number</type><unique>false</unique></fields><fields><fullName>FSL__Estimated_Travel_Time_From_Source__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Estimated Travel Time From Source</label><required>false</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>None</fullName><default>false</default><label>None</label></value><value><fullName>Aerial</fullName><default>false</default><label>Aerial</label></value><value><fullName>SLR</fullName><default>false</default><label>SLR</label></value><value><fullName>Predictive</fullName><default>false</default><label>Predictive</label></value></valueSetDefinition></valueSet></fields><fields><fullName>FSL__Estimated_Travel_Time_To_Source__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Estimated Travel Time To Source</label><required>false</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>None</fullName><default>false</default><label>None</label></value><value><fullName>Aerial</fullName><default>false</default><label>Aerial</label></value><value><fullName>SLR</fullName><default>false</default><label>SLR</label></value><value><fullName>Predictive</fullName><default>false</default><label>Predictive</label></value></valueSetDefinition></valueSet></fields><fields><fullName>FSL__Last_Updated_Epoch__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>Last Updated Epoch</label><precision>18</precision><required>false</required><scale>0</scale><type>Number</type><unique>false</unique></fields><fields><fullName>FSL__UpdatedByOptimization__c</fullName><defaultValue>false</defaultValue><deprecated>false</deprecated><externalId>false</externalId><label>UpdatedByOptimization</label><type>Checkbox</type></fields><fields><fullName>FSL__calculated_duration__c</fullName><deprecated>false</deprecated><externalId>false</externalId><label>calculated duration (Minutes)</label><precision>18</precision><required>false</required><scale>0</scale><type>Number</type><unique>false</unique></fields><sharingModel>ControlledByParent</sharingModel></CustomObject>